--- a/ghost/src/localization/en.json
+++ b/ghost/src/localization/en.json
@@ -1,1 +1,9 @@
-{}
+{
+    "layout": {
+        "search": "Search",
+        "downloads": "Downloads"
+    },
+    "account": {
+        "login": "Sign In"
+    }
+}
